lab9/tests/algo/good/declare_local_array.al

void main(void)
begin
  int x[10];

end