lab9/tests/algo/bad/bad1.al
int sum(void x, boolean b[]);

int sum(int s, boolean a[])
begin
  
  sum(s, a);

end